--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-native-vector-icons/evil-icons": "^12.0.0",
     "@react-native-vector-icons/fontawesome6": "^12.0.0",
     "@react-navigation/drawer": "^7.3.12",
+    "@react-navigation/native-stack": "^7.3.14",
     "expo": "~52.0.31",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^3.17.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
